--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="app">
-    <h1> My To-Do List</h1>
+   <div class="app"> 
+    <h1> TrackinAI</h1>
 
     <form id="task-form">
       <input type="text" id="task-input" placeholder="Enter a task..." required />
       <select id="category-select">
-        <option value="School">School</option>
+        <option value="School">Academics</option>
         <option value="Personal">Personal</option>
         <option value="Urgent">Urgent</option>
       </select>
@@ -25,7 +25,7 @@
       <select id="filter">
         <option value="All">All</option>
         <option value="School">School</option>
-        <option value="Personal"> Personal</option>
+        <option value="Personal">Personal</option>
         <option value="Urgent">Urgent</option>
       </select>
     </div>
