--- a/neighbourhood/index.html
+++ b/neighbourhood/index.html
@@ -3,19 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Categorized To-Do List</title>
+  <title>TrackinAI</title>
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap" rel="stylesheet">
+  <link rel="icon" href="icon.png" type="image/png"/> -->
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
    <div class="app"> 
+    <img src="C:\Users\adity\Desktop\Dev files\neighbourhood/icon.png">
     <h1> TrackinAI</h1>
 
     <form id="task-form">
       <input type="text" id="task-input" placeholder="Enter a task..." required />
       <select id="category-select">
-        <option value="School">Academics</option>
+        <option value="Academics">Academics</option>
         <option value="Personal">Personal</option>
-        <option value="Urgent">Urgent</option>
+        <option value="Office">Office</option>
+        <option value="Other">Other</option>
       </select>
       <button type="submit">Add Task</button>
     </form>
