--- a/neighbourhood/try.html
+++ b/neighbourhood/try.html
@@ -1,14 +1,14 @@
-
+<!-- 
 
 <!-- thisis a cmt..its shorcut is ctrl + / -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!-- <!-- <!DOCTYPE html>
+<html lang="en"> -->
+<!-- <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="style.css" /> -->
-</head>
+<!-- </head>
 <body>
     <div class="app">
         <h1>TrackinAI</h1>
@@ -23,11 +23,9 @@
   <option value="fiat">Office</option>
   <option value="audi">Personal</option>
 </select>
-        </form>
-    </div>
-    
-    
+        </form> --> -->
+    <!-- </div> -->
+     -->
+     -->
 
 
-</body>
-</html>
