app name changed
there was some fault in app name it was trackinai which should be taskinai

--- a/neighbourhood/index.html
+++ b/neighbourhood/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TrackinAI</title>
+  <title>TaskinAI</title>
   <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
    <div class="app"> 
     <img src="C:\Users\adity\Desktop\Dev files\neighbourhood/icon.png">
-    <h1> TrackinAI</h1>
+    <h1> TaskinAI</h1>
 
     <form id="task-form">
       <input type="text" id="task-input" placeholder="Enter a task..." required />
