trying to add icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <div class="app"> 
-    <img src="C:\Users\adity\Desktop\Dev files\neighbourhood/icon.png">
+    <img src="icon.png">
     <h1> TrackinAI</h1>
 
     <form id="task-form">
