--- a/neighbourhood/index.html
+++ b/neighbourhood/index.html
@@ -6,7 +6,7 @@
   <title>TaskinAI</title>
   <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap" rel="stylesheet">
+<link href="httpc bdjdfbbs://fonts.googleapis.com/css2?family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap" rel="stylesheet">
   <link rel="icon" href="icon.png" type="image/png"/> -->
 
   <link rel="stylesheet" href="style.css" />
