--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
    <div class="app"> 
     <img src="icon.png">
-    <h1> TrackinAI</h1>
+    <h1> TaskinAI</h1>
 
     <form id="task-form">
       <input type="text" id="task-input" placeholder="Enter a task..." required />
