added dark mode toggle

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
    <div class="app"> 
     <img src="icon.png">
     <h1> TaskinAI</h1>
+    <div class="dark"> <button onclick="toggleDarkMode()">🌙</button>
+      </div>
+
 
     <form id="task-form">
       <input type="text" id="task-input" placeholder="Enter a task..." required />
@@ -37,7 +40,7 @@
       </select>
     </div>
 
-    <ul id="task-list"></ul>
+    <ul id="task-list"> </ul>
   </div>
 
   <script src="script.js"></script>
