--- a/neighbourhood/index.html
+++ b/neighbourhood/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <div class="app"> 
-    <img src="C:\Users\adity\Desktop\Dev files\neighbourhood/icon.png">
+    <img src="C:\Users\adity\Documents\GitHub\neighbourhood/Aditya.png">
     <h1> TaskinAI</h1>
 
     <form id="task-form">
