--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <div class="app"> 
-    <img src="Aditya.png">
+    <img src="Aditya (2).png">
     <h1> TaskinAI</h1>
     <div class="dark"> <button onclick="toggleDarkMode()">🌙</button>
       </div>
