--- a/index.html
+++ b/index.html
@@ -4,20 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TaskinAI</title>
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap" rel="stylesheet">
-  <link rel="icon" href="icon.png" type="image/png"/> -->
 
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
    <div class="app"> 
-    <img src="Aditya (2).png">
+   <img src="Aditya (2).png">
     <h1> TaskinAI</h1>
-    <div class="dark"> <button onclick="toggleDarkMode()">🌙</button>
+    <div class="dark"> <button  onclick="toggleDarkMode()">☀</button></div>
       </div>
-
+l
 
     <form id="task-form">
       <input type="text" id="task-input" placeholder="Enter a task..." required />
