--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <button type="submit">Add Task</button>
     </form>
 
-    <div>
+    <div class="filter-section">
       <label for="filter">Filter:</label>
       <select id="filter">
         <option value="All">All</option>
@@ -37,6 +37,10 @@
     </div>
 
     <ul id="task-list"> </ul>
+    
+  <div class="progress-container">
+      <div class="progress-bar" id="progressBar"></div>
+    </div>
   </div>
 
   <script src="script.js"></script>
