--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <div class="app"> 
    <img src="Aditya (2).png">
-    <span style="color:rgb(27, 228, 177)"><h1> TaskinAI</h1></span>
+    <u></u><span style="color:rgb(27, 228, 177)"><h1> TaskinAI</h1></span></u>
     <div class="dark"> <button  onclick="toggleDarkMode()">☀</button></div>
       </div>
 
