--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
    <div class="app"> 
-   <img src="Aditya (2).png">
-   <span style="color:rgb(27, 228, 177)"><h1> TaskinAI</h1></span>
+   
+   <span style="color:rgb(27, 228, 177)"><h1><img src="Aditya (2).png"> TaskinAI</h1></span>
     <div class="dark"> <button  onclick="toggleDarkMode()">☀</button></div>
       </div>
 
