--- a/index.html
+++ b/index.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TaskinAI</title>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-   <div class="app"> 
-   
-   <span style="color:rgb(27, 228, 177)"><h1><img src="Aditya (2).png"> TaskinAI</h1></span>
-    <div class="dark"> <button  onclick="toggleDarkMode()">☀</button></div>
-      </div>
+  <div class="app">
 
-<br><br>
-    <form id="task-form">
-      <input type="text" id="task-input" placeholder="Enter a task..." required />
-      <select id="category-select">
-        <option value="Academics">Academics</option>
-        <option value="Personal">Personal</option>
-        <option value="Office">Office</option>
-        <option value="Other">Other</option>
-      </select>
-      <button type="submit">Add Task</button>
-    </form>
+    <span style="color:rgb(27, 228, 177)">
+      <h1><img src="Aditya (2).png"> TaskinAI</h1>
+    </span>
+    <div class="dark"> <button onclick="toggleDarkMode()">☀</button></div>
+  </div>
 
-    <div class="filter-section">
-      <label for="filter">Filter:</label>
-      <select id="filter">
-        <option value="All">All</option>
-        <option value="School">School</option>
-        <option value="Personal">Personal</option>
-        <option value="Urgent">Urgent</option>
-      </select>
-    </div>
+  <br><br>
+  <div class="callout">This is a example</div>
+  <form id="task-form">
+    <input type="text" id="task-input" placeholder="Enter a task..." required />
+    <select id="category-select">
+      <option value="Academics">Academics</option>
+      <option value="Personal">Personal</option>
+      <option value="Office">Office</option>
+      <option value="Other">Other</option>
+    </select>
+    <button type="submit">Add Task</button>
+  </form>
 
-    <ul id="task-list"> </ul>
-    
+  <div class="filter-section">
+    <label for="filter">Filter:</label>
+    <select id="filter">
+      <option value="All">All</option>
+      <option value="School">School</option>
+      <option value="Personal">Personal</option>
+      <option value="Urgent">Urgent</option>
+    </select>
+  </div>
+
+  <ul id="task-list"> </ul>
+
   <div class="progress-container">
-      <div class="progress-bar" id="progressBar"></div>
-    </div>
+    <div class="progress-bar" id="progressBar"></div>
+  </div>
   </div>
 
   <script src="script.js"></script>
 </body>
+
 </html>
